# ids_po_control

./: .dockerignore  .env.example  .gitignore  .mulerun.env  AI_CONTEXT.md  DOCKER_README.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  manage.py  requirements.txt
.claude/: .skills_whitelist_init
.opencode/: .skills_whitelist_init
.opencode/skills/cn-markets/: SKILL.md  pyproject.toml
.opencode/skills/cn-markets/references/: equity.md  futures.md  macro.md  options.md  research.md  sources.md
.opencode/skills/cn-markets/scripts/: equity.py  futures.py  macro.py  options.py  research.py
.opencode/skills/crypto-markets/: SKILL.md  pyproject.toml
.opencode/skills/crypto-markets/references/: derivatives.md  dex.md  news.md  onchain.md  sources.md  spot.md
.opencode/skills/crypto-markets/scripts/: derivatives.py  dex.py  news.py  onchain.py  spot.py
.opencode/skills/ta-engine/: SKILL.md  pyproject.toml
.opencode/skills/ta-engine/references/: indicators.md  input-shapes.md
.opencode/skills/ta-engine/scripts/: ta.py
portal/: middleware.py  settings.py  urls.py
procurement/: admin.py  mail.py  models.py  urls.py  views.py
procurement/migrations/: 0001_initial.py  0002_remove_issuer_email_issueremail.py  0003_supplierbankaccount_account_address.py  0004_alter_issuer_tax_id_alter_supplier_tax_id.py  0005_alter_po_requested_delivery_date.py  0006_po_incoterms_po_port_alter_bankaccount_id_and_more.py  0007_legalrepresentative_po_signer_primary_and_more.py  0008_pogeneratedpdf_autentique_fields.py  0013_add_product.py  (+7 more)
(+108 files in other folders)
